About page initialized

--- a/mydash/src/components/portfolio/portfolioHero.css
+++ b/mydash/src/components/portfolio/portfolioHero.css
@@ -32,6 +32,12 @@
   background-size: cover;
 }
 
+.dark-theme .has-sparkles::before,
+.dark-theme .has-sparkles::after {
+  background: url("/images/star-filled-white.png") top center no-repeat;
+  background-size: cover;
+}
+
 .inline-image.has-sparkles::before {
   width: 1rem;
   height: 1rem;
@@ -44,4 +50,21 @@
   height: 0.8rem;
   bottom: 1rem;
   right: -1.5rem;
+}
+
+.has-sparkles-alt::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 5vw;
+  max-width: 5rem;
+  height: 5vw;
+  max-height: 5rem;
+  background: url("/images/star-empty.png") center no-repeat;
+  background-size: cover;
+}
+
+.dark-theme .has-sparkles-alt::after {
+  background: url("/images/star-white.png") center no-repeat;
+  background-size: cover;
 }
