--- a/mydash/src/components/portfolio/portfolio.css
+++ b/mydash/src/components/portfolio/portfolio.css
@@ -83,6 +83,26 @@ textarea {
   position: relative;
 }
 
+.section:not(.hero)::before {
+  content: "";
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw;
+  height: 80vw;
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(255, 101, 118, 0.08) 0%,
+    rgba(255, 101, 118, 0) 100%
+  );
+  z-index: -1;
+}
+
+.d-grid {
+  display: grid;
+}
+
 /* Header */
 
 .header {
