--- a/temp-setup/src/components/portfolio/portfolioHero.css
+++ b/temp-setup/src/components/portfolio/portfolioHero.css
@@ -29,13 +29,13 @@
 .has-sparkles::after {
   content: "";
   position: absolute;
-  /* background: url("/images/star.png") top center no-repeat; */
+  background: url("./assets/star.png") top center no-repeat;
   background-size: cover;
 }
 
 .dark-theme .has-sparkles::before,
 .dark-theme .has-sparkles::after {
-  /* background: url("/images/star-filled-white.png") top center no-repeat; */
+  background: url("./assets/star-filled-white.png") top center no-repeat;
   background-size: cover;
 }
 
@@ -61,11 +61,11 @@
   max-width: 5rem;
   height: 5vw;
   max-height: 5rem;
-  /* background: url("/images/star-empty.png") center no-repeat; */
+  background: url("./assets/star-empty.png") center no-repeat;
   background-size: cover;
 }
 
 .dark-theme .has-sparkles-alt::after {
-  /* background: url("/images/star-white.png") center no-repeat; */
+  background: url("./assets/star-white.png") center no-repeat;
   background-size: cover;
 }
